--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ body {
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 35px;
+  text-indent: 35px;
 
   animation-name: moveInLeft;
   animation-duration: 1s;
@@ -77,6 +78,7 @@ body {
   font-size: 20px;
   font-weight: 400;
   letter-spacing: 17.6px;
+  text-indent: 17.6px;
 
   animation:  moveInRight 1s ease-out;
 }
@@ -109,6 +111,17 @@ body {
   }
 }
 
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0)
+  }
+}
+
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
@@ -117,6 +130,7 @@ body {
   display: inline-block;
   border-radius: 100px;
   transition: all .2s;
+  position: relative;
 }
 
 .btn:hover {
@@ -132,4 +146,32 @@ body {
 .btn-white {
   background-color: #fff;
   color: #777;
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.btn-white::after {
+  background-color: #fff;
+  color: #777;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-animated {
+  animation: moveInBottom .5s ease-out .75s;
+  animation-fill-mode: backwards;
 }
