--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,6 +7,10 @@ body {
   padding: 3rem;
 }
 
+main {
+  background-color: $color-grey-light-1;
+}
+
 .heading-primary {
   color: $color-white;
   text-transform: uppercase;
