--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,9 +13,11 @@ html {
   @include respond(tab-land) {
     font-size: 56.25%; // 1rem = 9px; 9px/16px = 56.25%
   }
+
   @include respond(tab-port) {
     font-size: 50%; // 1rem = 8px; 8px/16px = 50%
   }
+
   @include respond(big-desktop) {
     font-size: 75%; // 1rem = 12px; 12px/16px = 75%
   }
@@ -23,4 +25,9 @@ html {
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
