--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -24,11 +24,20 @@
     transform: translate(-50%, -50%) scale(0.4);
     transition: all .5s .2s;
 
+    @include respond(tab-port) {
+      width: 90%;
+    }
   }
   
   &__left {
     width: 33.333333%;
     display: table-cell;
+
+    @include respond(tab-land) {
+      width: 100%;
+      display: inline-block;
+      height: 30%;
+    }
   }
   
   &__right {
@@ -36,11 +45,38 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(tab-land) {
+      width: 100%;
+      display: inline-block;
+      height: auto;
+    }
   }
   
   &__img {
     display: block;
     width: 100%;
+
+    @include respond(tab-land) {
+      float: left;
+      max-height: max-content;
+      max-width: fit-content;
+    }
+
+    &:nth-of-type(1) {
+
+      @include respond(tab-land) {
+        width: calc(100% - 49.2061626%);
+      }
+    }
+
+    &:nth-of-type(2) {
+
+      @include respond(tab-land) {
+        width: 49.2061626%;
+      }
+    }
+    
   }
   
   &__text {
@@ -58,6 +94,11 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+
+    @include respond(tab-port) {
+      -moz-column-count: 1;
+      column-count: 1;
+    }
   }
 
   //Open states
